Update intranet emails and media indexes

--- a/intranet/index.html
+++ b/intranet/index.html
@@ -8,17 +8,17 @@
 <body>
   <main>
     <h1>NEXUS Secure Intranet</h1>
-    <form>
-      <label>User ID
-        <input type="text" name="user">
-      </label>
-      <label>Password
-        <input type="password" name="pass">
-      </label>
-      <button type="submit" disabled>Login temporarily disabled</button>
-    </form>
-    <!-- TODO: remove public backup endpoint from /backups/2024/ before audit -->
+    <p>Internal resources and project documentation.</p>
+    
+    <h2>Quick Access</h2>
+    <ul>
+      <li><a href="emails/">Internal Mail Archive</a></li>
+      <li><a href="projects/artemis/">Project ARTEMIS Documentation</a></li>
+      <li><a href="media/">Media & Transcripts Archive</a></li>
+    </ul>
+    
+    <hr>
+    <p><small><!-- Reminder: decommission public /backups/2024/ snapshot before external audit --></small></p>
   </main>
 </body>
 </html>
-
